# aoc_2022

./: Cargo.toml  README.md  bacon.toml
.github/workflows/: rust.yml
examples/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day14.rs  day15.rs
