[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ndarray = "0.15.6"
regex = "1.7.0"
lazy_static = "1.4.0"

[[example]]
name = "day01"
test = true

[[example]]
name = "day02"
test = true

[[example]]
name = "day03"
test = true

[[example]]
name = "day04"
test = true

[[example]]
name = "day05"
test = true

[[example]]
name = "day06"
test = true

[[example]]
name = "day07"
test = true

[[example]]
name = "day08"
test = true

[[example]]
name = "day09"
test = true

[[example]]
name = "day10"
test = true

[[example]]
name = "day14"
test = true

[[example]]
name = "day15"
test = true
